fix: removed whitespace under videos

--- a/public/styles.css
+++ b/public/styles.css
@@ -1990,6 +1990,7 @@ select:invalid {
 	border-radius: 221px 221px 0 0;
 	position: relative;
 	max-width: 441px;
+  display: block;
 }
 
 .testing {
